# IntImg

./: environment.yml
src/Python/: CMakeLists.txt  install.py
src/Python/intimging/: methodsDIR.py  methodsIR.py
src/Python/temp/: read_hdf5.py
